...
        android:layout_marginTop="16dp"
        android:src="@drawable/buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buy1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/price3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
